# timber-as

./: .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  README.rst  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements2.txt  setup.cfg
docs/: index.md  install.md  reference.md  tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial-4.md
examples/: AS1684_dicts.py  basic.py  getting_started_1.py  getting_started_2.py  test.py  tutorial_1.py  tutorial_2.py  tutorial_3.py  tutorial_4.py
src/timberas/: AS1684_dicts.py  __init__.py  geometry.py  material.py  member.py  utils.py
src/timberas/data/: material_library.csv  section_library.csv
src/timberas/shapes/: rectangle.py
tests/: test_materials.py
