[metadata]
name = timberas
version = 0.0.21
license = MIT
description = timberas is Python package for the design of timber structures to relevant Australian Standards
long_description = file: README.rst
author = Joe Gattas
keywords = AS1170, AS1684
author_email = j.gattas@uq.edu.au
classifiers=
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where=src
